# solana-dex-arbitrage-rust

./: .gitignore  ALL_BASE.md  ATUALIZACOES_2024.md  BASE-ChatGPT.md  BASE-DeepSeek.md  BASE-Grok.md  BASE-Manus.md  BASE-Mistral.md  BASE-Perplexity.md  BASE.md  Cargo.toml  DEPLOYMENT_CHECKLIST_2024.md  INSTALL.md  Makefile  NEXT_STEPS_PLAN.md  PR_REVIEW.md  README.md  TASKS.md  code_review_report.md  dev_rules.md  install-deps.ps1  install-deps.sh  project_rules.md  quick-build.sh
.cursor/rules/: docs.mdc
src/: graph.rs  main.rs
src/config/: mod.rs  settings.rs
src/dex/: aldrin.rs  jupiter.rs  lifinity.rs  mercurial.rs  meteora.rs  mod.rs  openbook.rs  orca.rs  phoenix.rs  raydium.rs  saber.rs  traits.rs
src/execution/: executor.rs  jito.rs  mod.rs  transaction_builder.rs
src/math/: amm.rs  arbitrage.rs  mod.rs
src/monitoring/: mod.rs  price_monitor.rs  websocket.rs  yellowstone.rs
src/risk/: manager.rs  mod.rs
src/strategy/: direct.rs  mod.rs  multi_dex.rs  triangular.rs
src/utils/: constants.rs  helpers.rs  metrics.rs  mod.rs  priority_fees.rs  rate_limiting.rs
