[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["Arbitrage Bot Team"]
description = "BONK/SOL arbitrage bot for Solana DEXs"
license = "MIT"

[dependencies]
# Solana - Versões ESTÁVEIS E COMPATÍVEIS
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.0"

# Anchor Framework - Versão ESTÁVEL compatível com Solana 1.18
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.20"

# WebSocket para real-time data
tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and utilities
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"
envy = "0.4"

# Rate limiting
governor = "0.6"

# Base64 encoding for Solana data
base64 = "0.21"

# Web server for metrics endpoint
axum = { version = "0.7", optional = true }

# Metrics collection
prometheus = { version = "0.13", optional = true }

# Static initialization (replacement for lazy_static)
once_cell = "1.19"

[features]
default = []
metrics = ["prometheus", "axum"]

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4" 