[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["Arbitrage Bot Team"]
description = "BONK/SOL arbitrage bot for Solana DEXs"
license = "MIT"

[dependencies]
# Solana - Versões compatíveis
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.0"

# Anchor Framework - Versão compatível com Solana 1.17
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.20"

# WebSocket para real-time data
tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Math and utilities
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenv = "0.15"
envy = "0.4"

# Rate limiting
governor = "0.6"

# Base64 encoding for Solana data
base64 = "0.21"

# Web server for metrics endpoint - OBRIGATÓRIO 2024
axum = "0.7"

# Metrics collection - OBRIGATÓRIO 2024
prometheus = "0.13"

# Static initialization (replacement for lazy_static)
once_cell = "1.19"

[features]
default = ["metrics"]
metrics = []

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4" 